# click-hotoffthehamster

./: .flake8  .pre-commit-config.yaml  .pyproject.project.tmpl  .readthedocs-click.yaml  CHANGES.rst  CONTRIBUTING.rst  Makefile.project  Makefile.project.after  pyproject.toml
.github/: dependabot-click.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lock.yaml  publish.yaml  tests.yaml
.pyproject-prerelease/: pyproject.toml
docs/: .gitignore  conf.py  testing.rst  utils.rst
examples/aliases/: aliases.py  pyproject.toml
examples/colors/: colors.py  pyproject.toml
examples/completion/: completion.py  pyproject.toml
examples/complex/: pyproject.toml
examples/complex/complex/: cli.py
examples/complex/complex/commands/: cmd_init.py
examples/imagepipe/: imagepipe.py  pyproject.toml
examples/inout/: pyproject.toml
examples/naval/: naval.py  pyproject.toml
examples/repo/: pyproject.toml  repo.py
examples/termui/: pyproject.toml  termui.py
examples/validation/: pyproject.toml  validation.py
src/click/: core.py  formatting.py
src/click_hotoffthehamster/: __init__.py  core.py  decorators.py  formatting.py  parser.py  shell_completion.py  termui.py  types.py  utils.py
tests/: test_arguments.py  test_basic.py  test_chain.py  test_command_decorators.py  test_commands.py  test_compat.py  test_context.py  test_custom_classes.py  test_defaults.py  test_formatting.py  test_imports.py  test_info_dict.py  test_normalization.py  test_options.py  test_parser.py  test_shell_completion.py  test_termui.py  test_testing.py  test_types.py  test_utils.py
tests/typing/: typing_aliased_group.py  typing_confirmation_option.py  typing_group_kw_options.py  typing_help_option.py  typing_options.py  typing_password_option.py  typing_simple_example.py  typing_version_option.py
